📊 fix long words breaking comments layout on mobile

--- a/results/src/core/charts/common2/comments/Comments.scss
+++ b/results/src/core/charts/common2/comments/Comments.scss
@@ -96,15 +96,13 @@
     color: var(--textColorInverted);
     padding: var(--spacing);
     position: relative;
-    display: flex;
-    justify-content: space-between;
-    gap: var(--spacing);
 }
 
 .comment-index {
     // font-weight: bold;
     @include small {
         font-size: 1rem;
+        display: none;
     }
     @include medium-large {
         font-size: 1.3rem;
@@ -127,6 +125,7 @@
 }
 
 .comment-message {
+    overflow-wrap: break-word;
     .highlight,
     mark {
         display: inline-block;
@@ -134,16 +133,20 @@
     }
 }
 .comments-list {
-    display: grid;
-    grid-template-columns: min-content 1fr;
+    @include medium-large {
+        display: grid;
+        grid-template-columns: min-content 1fr;
+    }
 }
 
 .comment-item-wrapper {
     margin-bottom: var(--spacing);
-    display: grid;
-    grid-template-columns: subgrid;
-    gap: var(--halfSpacing);
-    grid-column: 1/3;
+    @include medium-large {
+        display: grid;
+        grid-template-columns: subgrid;
+        gap: var(--halfSpacing);
+        grid-column: 1/3;
+    }
 }
 
 .comment-report-link {
